commit - update, inclusão IMC e Moedas Pages, Tabs Cambio e Cripto, Etc.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^3.0.0
+  hidden_drawer_menu: ^3.0.1
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +61,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - image/bitcoin.png
+    - image/cardano.png
+    - image/ethereum.png
+    - image/litecoin.png
+    - image/usdcoin.png
+    - image/xrp.png
+    - image/dolar.png
+    - image/euro.png
+    - image/libra.png
+    - image/yen.png
+    - image/franco_suico.png
+    - image/dolar_canadense.png
+    - image/dinar.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
